samples/_failures_safe/1761715883_1dff67_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_94e0ac9a.c: In function ‘tokenize’:
./samples/SAFE/__tmp_94e0ac9a.c:175:5: error: expected expression at end of input
  175 |     tokens[*token_count].value[0] =
      |     ^~~~~~
./samples/SAFE/__tmp_94e0ac9a.c:175:5: error: expected declaration or statement at end of input
